fix overflow

--- a/themes/scss/widgets/list.scss
+++ b/themes/scss/widgets/list.scss
@@ -77,7 +77,7 @@
   padding: 0 $baseSize * 3;
 }
 
-.CDB-Widget-listWrapper .CDB-Widget-listGroup {
+.CDB-Widget-list--wrapped .CDB-Widget-listGroup {
   overflow: visible;
 }
 
